Uh... very neon...

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -10,20 +10,20 @@
 @mono-3: #546356;
 
 // Colors -----------------------------------
-@hue-1:   #EB5C5C;   // <-magenta
-@hue-2:   #05C7C7;   // <-green
-@hue-3:   #64D860;   // <-blue
-@hue-4:   #FF9E70;   // <-yellow
-@hue-5:   #B193DF;   // <-purple
-@hue-6:   #FF6F47;   // <-orange
-@hue-7:   #F24C05;   // <-red
+@hue-1:   #FF3366;   // <-magenta
+@hue-2:   rgb(131, 139, 47);   // <-green
+@hue-3:   #7AE7C7;   // <-blue
+@hue-4:   #FFBF25;   // <-yellow
+@hue-5:   #5E239D;   // <-purple
+@hue-6:   #F0793F;   // <-orange
+@hue-7:   #942F0A;   // <-red
 
 
 @bg:  hsl(270, 5%, 17%);
 
 // Base colors -----------------------------------
 @syntax-fg:     @mono-1;
-@syntax-bg:     #1E1C21;  // #22223B #262626
+@syntax-bg:     #100007;  // #22223B #262626
 @syntax-gutter: darken(@syntax-fg, 35%);
 @syntax-guide:  fade(@syntax-fg, 12%);
 @syntax-accent: hsl(@syntax-hue, 6%, 95%);
